--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         <h1>Contact Us</h1>
         <p>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Homepage</a></li>
                 <li><a href="index.html#section1">About <abbr title="Little Taco Shop">LTS</abbr></a></li>
                 <li><a href="index.html#section2">Our Menu</a></li>
                 <li><a href="hours.html">Store Hours</a></li>
